Start work at pagination Add sample posts

--- a/_config.yaml
+++ b/_config.yaml
@@ -1,1 +1,8 @@
 name: Jekyll Workshop
+paginate: 5
+paginate_path: "/page:num"
+
+plugins:
+  - jekyll-paginate
+  - jekyll-feed
+  - jekyll-sitemap
