--- a/_config.yaml
+++ b/_config.yaml
@@ -1,6 +1,6 @@
 name: Jekyll Workshop
 paginate: 8
-paginate_path: "/page:num"
+paginate_path: "SampleJekyllTheme/page:num"
 
 plugins:
   - jekyll-paginate
