Add support for youtube videos Add supprort fot code highlight

--- a/_config.yaml
+++ b/_config.yaml
@@ -1,6 +1,8 @@
 name: Jekyll Workshop
 paginate: 8
 paginate_path: "SampleJekyllTheme/page:num"
+markdown: kramdown
+highlighter: rouge
 
 plugins:
   - jekyll-paginate
