--- a/_config.yaml
+++ b/_config.yaml
@@ -1,8 +1,10 @@
 name: Jekyll Workshop
 paginate: 8
 paginate_path: "SampleJekyllTheme/page:num"
+permalink: /:categories/:title/
 markdown: kramdown
 highlighter: rouge
+url: https://dawid93.github.io/SampleJekyllTheme
 
 plugins:
   - jekyll-paginate
